
2016-06-18  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* common.c, common.h: renamed (runtime_env) to (runtime_conf)

2016-05-27  Edward Hart <edward.dan.hart@gmail.com>

	* move.c (cob_move_display_to_edited): fixed bug #220 - fixed insertion
	  which float are now distinguished from those which don't.

2016-05-23  Brian Tiffin <btiffin@gnu.org>

	* termio.c: Reverted length truncation in cob_accept for numeric fields.

2016-05-22  Edward Hart <edward.dan.hart@gmail.com>

	* common.h, move.c, termio.c: replaced PICTURE strings containing packed
	  ints with array of (cob_pic_symbol) structs which are easier to use.

2016-05-21  Brian Tiffin <btiffin@gnu.org>

	* termio.c: Removed a length test from cob_accept for numeric fields.

2016-04-26  Brian Tiffin <btiffin@gnu.org>

	* common.c, common.h: Re-fixed CBL_OC_HOSTED tzname, timezone, daylight
	  for VC2013 names.

2016-04-25  Brian Tiffin <btiffin@gnu.org>

	* common.c: Fixed CBL_OC_HOSTED tzname, timezone, daylight for WIN32 names.

2016-04-23  Brian Tiffin <btiffin@gnu.org>

	* common.h, numeric.c: 64bit unsigned treated as signed when long int
	  same size as long long.

2016-04-06  Brian Tiffin <btiffin@gnu.org>

	* common.c: Updated CBL_OC_HOSTED with tzname, timezone, daylight.

2016-03-29  Edward Hart <edward.dan.hart@gmail.com>

	* common.c (cob_set_exception), common.h, coblocal.h: made cob_set_
	  exception a public function for SET LAST EXCEPTION TO OFF. Also made
	  argument of 0 reset all exception information.

2016-03-28  Brian Tiffin <btiffin@gnu.org>

	* common.c, common.h, system.def: Added CBL_OC_HOSTED
	  feature-request #49.

2016-03-23  Edward Hart <edward.dan.hart@gmail.com>

	* intrinsic.c (numval): added missing NUMVAL-C-specific code I missed in
	  r793, causing bug #218.

2016-03-21  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* common.c (cob_set_location, cob_trace_section, cob_exit_common): fix for